[FIX] Algo insertion -> fonctionnement correct, complexité O(n³) = n x O(n²)